fixed responsive handbook issues on mobile

--- a/themes/doi-theme/assets/sass/partials/_handbook.scss
+++ b/themes/doi-theme/assets/sass/partials/_handbook.scss
@@ -184,6 +184,81 @@
 
   .tabs > .content p:not(.note):last-of-type { padding-bottom: 0px; }
 
+  #handbook-menu-checkbox {
+    display:none;
+  }
+  @media (max-width: 1024px) {
+		flex-direction: column;
+    .col:nth-of-type(1) {
+      flex:auto;
+      flex-grow:0;
+      max-height:50vh;
+      background-color:#f0f0f0;
+    }
+    .col:nth-of-type(2) {
+      width:100%;
+      flex-grow:3;
+    }
+    .handbook-hamburger-lines {
+      display: block;
+      height: 23px;
+      width: 35px;
+      position: absolute;
+      top: 3px;
+      right: 3px;
+      z-index: 500;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      .line {
+          display: block;
+          height: 4px;
+          width: 100%;
+          border-radius: 10px;
+          background: #333;
+      }
+      .line1 {
+          transform-origin: 0% 0%;
+          transition: transform 0.4s ease-in-out;
+      }
+      .line2 {
+          transition: transform 0.2s ease-in-out;
+      }
+      .line3 {
+          transform-origin: 0% 100%;
+          transition: transform 0.4s ease-in-out;
+      }
+    }
+    #handbook-menu-checkbox {      
+      position: absolute;
+      display: block;
+      height: 32px;
+      width: 30px;
+      top: 0;
+      right:0;
+      z-index: 501;
+      opacity: 0;
+      cursor: pointer;
+    }
+    nav.top-nav {
+      display:none;
+    }
+    #handbook-menu-checkbox:checked ~ .top-nav {
+        display:flex;
+    }
+    #handbook-menu-checkbox:checked ~ .handbook-hamburger-lines .line1 {
+        transform: rotate(35deg);
+    }
+            
+    #handbook-menu-checkbox:checked ~ .handbook-hamburger-lines .line2 {
+        transform: scaleY(0);
+    }
+
+    #handbook-menu-checkbox:checked ~ .handbook-hamburger-lines .line3 {
+        transform: rotate(-35deg);
+    }
+	}	
+
   
 }
 
