--- a/themes/doi-theme/assets/sass/partials/single/_top.scss
+++ b/themes/doi-theme/assets/sass/partials/single/_top.scss
@@ -138,6 +138,7 @@ margin: ($standard-padding * 1) auto 0;
 }
 
 section.single-top-lighter {
+    margin: 120px auto 40px;
     .row {
         padding-top:0;
     }
